--- a/02_Fetch_Data/fetch_data.ipynb
+++ b/02_Fetch_Data/fetch_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,16 @@
     "import pandas as pd\n",
     "import requests\n",
     "import json\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from requests.auth import HTTPBasicAuth\n",
+    "from sqlalchemy import create_engine\n",
+    "import logging\n",
+    "from datetime import datetime, timedelta\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DHIS2 instance URL: https://eidsr.znphi.co.zm/\n"
+      "DHIS2 instance URL: https://training.eidsr.znphi.co.zm/\n"
      ]
     }
    ],
@@ -54,28 +58,50 @@
     "DHIS2_URL = credentials.get('DHIS2_URL')\n",
     "USERNAME = credentials.get('USERNAME')\n",
     "PASSWORD = credentials.get('PASSWORD')\n",
+    "DB_NAME = credentials.get('DB_NAME')\n",
+    "DB_USER = credentials.get('DB_USER')\n",
+    "DB_PASS = credentials.get('DB_PASS')\n",
     "\n",
     "print(\"DHIS2 instance URL:\", DHIS2_URL)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the API endpoint for datasets\n",
-    "endpoint = f\"{DHIS2_URL}/api/dataSets.json\"\n",
+    "# # Define the API endpoint for datasets\n",
+    "# endpoint = f\"{DHIS2_URL}/api/dataSets.json\"\n",
     "\n",
-    "# Make the request with authentication\n",
-    "response = requests.get(endpoint, auth=(USERNAME, PASSWORD), params={'paging': 'false'})\n",
+    "# # Make the request with authentication\n",
+    "# response = requests.get(endpoint, auth=(USERNAME, PASSWORD), params={'paging': 'false'})\n",
     "\n",
-    "# Check if the request was successful\n",
-    "if response.status_code == 200:\n",
-    "    datasets = response.json()\n",
-    "    print(\"Data retrieved successfully!\")\n",
-    "else:\n",
-    "    print(\"Failed to retrieve data:\", response.status_code, response.text)\n"
+    "# # Check if the request was successful\n",
+    "# if response.status_code == 200:\n",
+    "#     datasets = response.json()\n",
+    "#     print(\"Data retrieved successfully!\")\n",
+    "# else:\n",
+    "#     print(\"Failed to retrieve data:\", response.status_code, response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Convert JSON to DataFrame\n",
+    "# df = pd.DataFrame(datasets['dataSets'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.head(20)"
    ]
   },
   {
@@ -83,19 +109,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Convert JSON to DataFrame\n",
-    "df = pd.DataFrame(datasets['dataSets'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head(20)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
