--- a/01_Query_Data/querydata.ipynb
+++ b/01_Query_Data/querydata.ipynb
@@ -2682,6 +2682,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training Instance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2694,7 +2701,7 @@
     "from datetime import datetime\n",
     "\n",
     "# DHIS2 instance and API endpoints\n",
-    "DHIS2_BASE_URL = \"\"\n",
+    "DHIS2_BASE_URL = \"https:\"\n",
     "API_ENDPOINT_ANALYTICS = \"/api/40/analytics.json\"\n",
     "API_ENDPOINT_DATA_ELEMENTS = \"/api/40/dataElements.json\"\n",
     "\n",
@@ -2873,13 +2880,227 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Runs correcly but not runtime is not efficient "
+    "#### Production Instance"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path\n",
+    "credentials_2_path = base_dir / '00_Local' / '01_Configs' / 'credentials2.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Prod Credentials\n",
+    "credentials_2 = {}\n",
+    "with credentials_2_path.open('r') as file:\n",
+    "    for line in file:\n",
+    "        if '=' in line:\n",
+    "            key, value = line.strip().split('=', 1)\n",
+    "            credentials_2[key.strip()] = value.strip()\n",
+    "\n",
+    "# Extract values\n",
+    "DHIS2_URL = credentials_2.get('DHIS2_URL')\n",
+    "USERNAME = credentials_2.get('USERNAME')\n",
+    "PASSWORD = credentials_2.get('PASSWORD')\n",
+    "PAT = credentials_2.get('PAT')\n",
+    "\n",
+    "print(\"DHIS2 instance URL:\", DHIS2_URL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DHIS2 instance and API endpoints\n",
+    "API_ENDPOINT_ANALYTICS = \"/api/40/analytics.json\"\n",
+    "API_ENDPOINT_DATA_ELEMENTS = \"/api/40/dataElements.json\"\n",
+    "\n",
+    "# Token authentication\n",
+    "# TOKEN = \"\"\n",
+    "HEADERS = {\"Authorization\": f\"ApiToken {PAT}\"}\n",
+    "\n",
+    "# Step 1: Generate Weekly Period List (from 2020W1 to current week)\n",
+    "def generate_weekly_periods(start_year=2020, batch_size=8):\n",
+    "    \"\"\"Generate weekly periods grouped into chunks (starting with 8 weeks per request).\"\"\"\n",
+    "    today = datetime.today()\n",
+    "    current_year, current_week = int(today.strftime(\"%Y\")), int(today.strftime(\"%V\"))\n",
+    "\n",
+    "    weekly_periods = []\n",
+    "    period_batches = []\n",
+    "    \n",
+    "    for year in range(start_year, current_year + 1):\n",
+    "        max_weeks = 53 if datetime(year, 12, 28).isocalendar()[1] == 53 else 52\n",
+    "        for week in range(1, max_weeks + 1):\n",
+    "            if year == current_year and week > current_week:\n",
+    "                break\n",
+    "            weekly_periods.append(f\"{year}W{week}\")\n",
+    "    \n",
+    "    # Group weeks into period chunks (default: 8 weeks per batch)\n",
+    "    for i in range(0, len(weekly_periods), batch_size):\n",
+    "        period_batches.append(weekly_periods[i:i + batch_size])\n",
+    "    \n",
+    "    return period_batches\n",
+    "\n",
+    "weekly_period_batches = generate_weekly_periods()\n",
+    "print(f\"Generated {len(weekly_period_batches)} period batches.\")  # Debugging\n",
+    "\n",
+    "# Step 2: Fetch all data elements dynamically and filter only numeric elements\n",
+    "def fetch_aggregatable_data_elements():\n",
+    "    response = requests.get(\n",
+    "        f\"{DHIS2_URL}{API_ENDPOINT_DATA_ELEMENTS}?fields=id,valueType,aggregationType&paging=false\",\n",
+    "        headers=HEADERS\n",
+    "    )\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        data = response.json()\n",
+    "        \n",
+    "        # Filter only numeric data elements that allow aggregation\n",
+    "        valid_data_elements = [\n",
+    "            item[\"id\"]\n",
+    "            for item in data.get(\"dataElements\", [])\n",
+    "            if item.get(\"valueType\") in [\"INTEGER\", \"NUMBER\", \"PERCENTAGE\", \"UNIT_INTERVAL\"]\n",
+    "            and item.get(\"aggregationType\") in [\"SUM\", \"AVERAGE\", \"COUNT\"]\n",
+    "        ]\n",
+    "        \n",
+    "        return valid_data_elements\n",
+    "    else:\n",
+    "        print(f\"Error fetching data elements: {response.status_code} - {response.text}\")\n",
+    "        return []\n",
+    "\n",
+    "# Get all valid data element UIDs\n",
+    "data_element_uids = fetch_aggregatable_data_elements()\n",
+    "\n",
+    "if not data_element_uids:\n",
+    "    print(\"No valid data elements found. Exiting...\")\n",
+    "    exit()\n",
+    "\n",
+    "# Step 3: Split API Requests to Avoid DHIS2 Limits\n",
+    "BATCH_SIZE = 200  # Increase data elements per request (from 50 to 200)\n",
+    "num_batches = math.ceil(len(data_element_uids) / BATCH_SIZE)\n",
+    "\n",
+    "# Output CSV file\n",
+    "csv_filename = \"ND2_Data_2020W1_to_2025W5.csv\"\n",
+    "all_rows = []\n",
+    "\n",
+    "# Step 4: Process Data in Batches with Dynamic Period Splitting\n",
+    "for batch in range(num_batches):\n",
+    "    batch_uids = data_element_uids[batch * BATCH_SIZE : (batch + 1) * BATCH_SIZE]\n",
+    "    dx_param = f\"dx:{';'.join(batch_uids)}\"\n",
+    "\n",
+    "    for period_chunk in weekly_period_batches:\n",
+    "        period_param = f\"pe:{';'.join(period_chunk)}\"\n",
+    "        max_period_size = len(period_chunk)\n",
+    "\n",
+    "        while max_period_size > 0:  # Adaptive period splitting loop\n",
+    "            print(f\"Processing Batch {batch + 1}/{num_batches}, Period Batch: {period_chunk[:10]}...\")\n",
+    "\n",
+    "            params = {\n",
+    "                \"dimension\": [\n",
+    "                    dx_param,\n",
+    "                    \"ou:LEVEL-4\",  # Facility-level\n",
+    "                    period_param  # Weekly periods chunk\n",
+    "                ],\n",
+    "                \"displayProperty\": \"NAME\",\n",
+    "                \"outputIdScheme\": \"UID\",\n",
+    "                \"includeMetadata\": \"true\",\n",
+    "                \"includeNames\": \"true\",\n",
+    "                \"limit\": 10000,  # Limit results per request\n",
+    "                \"paging\": \"true\",\n",
+    "                \"page\": 1\n",
+    "            }\n",
+    "\n",
+    "            response = requests.get(\n",
+    "                f\"{DHIS2_URL}{API_ENDPOINT_ANALYTICS}\",\n",
+    "                params=params,\n",
+    "                headers=HEADERS,\n",
+    "                stream=True\n",
+    "            )\n",
+    "\n",
+    "            if response.status_code == 200:\n",
+    "                data = response.json()\n",
+    "\n",
+    "                # Extract metadata (UID <-> Name mapping)\n",
+    "                metadata = data.get(\"metaData\", {})\n",
+    "                data_elements = metadata.get(\"items\", {})\n",
+    "\n",
+    "                # Extract actual data values\n",
+    "                rows = data.get(\"rows\", [])\n",
+    "\n",
+    "                if not rows:\n",
+    "                    break  # No more pages, exit loop\n",
+    "\n",
+    "                for row in rows:\n",
+    "                    data_element_id = row[0]  # Data Element UID\n",
+    "                    org_id = row[1]  # Org Unit UID\n",
+    "                    period = row[2]  # Period (week)\n",
+    "                    value = row[3]  # Reported value\n",
+    "\n",
+    "                    # Get corresponding names from metadata\n",
+    "                    data_element_name = data_elements.get(data_element_id, {}).get(\"name\", data_element_id)\n",
+    "\n",
+    "                    # Append row to list for processing\n",
+    "                    all_rows.append([period, org_id, data_element_name, value])\n",
+    "\n",
+    "                break  # Successfully retrieved data, move to next period batch\n",
+    "\n",
+    "            elif response.status_code == 409 and \"Query result set exceeded max limit\" in response.text:\n",
+    "                max_period_size //= 2  # Reduce period batch size\n",
+    "                period_chunk = period_chunk[:max_period_size]  # Take smaller chunk\n",
+    "                period_param = f\"pe:{';'.join(period_chunk)}\"\n",
+    "                print(f\"Query limit exceeded. Retrying with smaller batch: {max_period_size} weeks.\")\n",
+    "\n",
+    "            else:\n",
+    "                print(f\"Error in batch {batch + 1}, period batch {period_chunk[:10]}: {response.status_code} - {response.text}\")\n",
+    "                break\n",
+    "\n",
+    "print(f\"Data successfully retrieved. Now processing transformation...\")\n",
+    "\n",
+    "# Convert list to DataFrame\n",
+    "df = pd.DataFrame(all_rows, columns=[\"period\", \"org_id\", \"data_element\", \"value\"])\n",
+    "\n",
+    "# Remove duplicates\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "\n",
+    "# Convert `period` (e.g., \"2025W05\") into proper `date` format (start of the week)\n",
+    "def convert_iso_week_to_date(iso_week):\n",
+    "    year, week = iso_week[:4], iso_week[5:]\n",
+    "    return datetime.strptime(year + week + '1', \"%G%V%w\")  # Monday as start of the week\n",
+    "\n",
+    "df[\"date\"] = df[\"period\"].apply(lambda x: convert_iso_week_to_date(x).strftime(\"%Y-%m-%dT00:00:00\"))\n",
+    "\n",
+    "# Pivot the data: Convert `data_element` values into columns\n",
+    "df_pivoted = df.pivot_table(\n",
+    "    index=[\"period\", \"org_id\", \"date\"],  # Keep these as row identifiers\n",
+    "    columns=\"data_element\",  # Each data element becomes a column\n",
+    "    values=\"value\",  # Fill with reported values\n",
+    "    aggfunc=\"sum\"  # If duplicates exist, aggregate them\n",
+    ").reset_index()\n",
+    "\n",
+    "# Sort Data by `period` (newest to oldest)\n",
+    "df_pivoted.sort_values(by=\"period\", ascending=False, inplace=True)\n",
+    "\n",
+    "# Save Pivoted Data to New CSV\n",
+    "pivoted_csv_filename = \"ND2_Data_2020W1_to_2025W5_Pivoted.csv\"\n",
+    "df_pivoted.to_csv(pivoted_csv_filename, index=False)\n",
+    "\n",
+    "print(f\"Data successfully pivoted, sorted, and saved to {pivoted_csv_filename}\")"
+   ]
   }
  ],
  "metadata": {
